--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section id="product">
         <h1 data-aos="zoom-out">New Product</h1>
         <br>
-        <div class="product" data-aos="zoom-in">
+        <center><div class="product" data-aos="zoom-in">
             <div class="item">
                 <img src="./images/product/item1.png" alt="Produk 1">
                 <h2>Laptop N200VQ Core I9</h2>
@@ -109,7 +109,7 @@
 - Baterai: 5500 mAh dengan fast charging 120W</p>
                 <p><span class="price">Rp8,499.00</span> Rp7,580.00</p>
             </div>
-        </div>
+        </div></center>
     </section>
     <section id="footer">
         <div class="container">
